# cs1950u-lab-3

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
dependencies/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/imguizmo/: CMakeLists.txt
dependencies/imguizmo/ImGuizmo/: INTEGRATION_README.md
res/shaders/: fragment.glsl  fragment_solid.glsl  vertex.glsl  vertex_solid.glsl
resources/Shaders/: phong_frag.glsl
src/: CMakeLists.txt  Collider.cpp  Collider.h  Core.cpp  Core.h  GJK.cpp  GJK.h  Transform.cpp  Transform.h  UI.cpp  UI.h  Window.cpp  Window.h  camera.cpp  camera.h  debug.h  main.cpp  mesh.cpp  mesh.h  shaders.cpp  shaders.h  transform.cpp  transform.h  window.cpp  window.h
src/collision/: Collider.cpp  Collider.h  CollisionFunctions.cpp  CollisionFunctions.h  ConeCollider.cpp  ConeCollider.h  ConvexCollider.cpp  ConvexCollider.h  CylinderCollider.cpp  CylinderCollider.h  GJK.h  TriangleCollider.cpp  TriangleCollider.h  collider.h  collision.cpp  collision.h  visualizer.cpp  visualizer.h
src/collision/types/: BoxCollider.cpp  BoxCollider.h  ConvexCollider.cpp  ConvexCollider.h  CylinderCollider.cpp  SphereCollider.cpp  SphereCollider.h
src/collision_backup/: CMakeLists.txt  collider.h  collision.cpp  collision.h  visualizer.cpp  visualizer.h
src/core/: Core.cpp  Core.h  Debug.h  File.h  UI.cpp  Util.h  Visuals.cpp  Visuals.h  Window.cpp
src/render/: Camera.cpp  Graphics.cpp  Graphics.h  Mesh.cpp  Mesh.h  Shaders.cpp  SkeletalMesh.cpp  Texture.cpp  Texture.h  Transform.cpp  Transform.h
